--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "phishscraper",
   "version": "1.0.0",
   "description": "Scrape site in Flask format",
-  "main": "scraper.js",
+  "main": "gscraper.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
